[package]
name = "turn-me-off"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"]}
tower-http = { version = "0.5.0", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

[lints.clippy]
pedantic = "deny"
dbg_macro = "deny"
empty_structs_with_brackets = "deny"
float_cmp_const = "deny"
if_then_some_else_none = "deny"
same_name_method = "deny"
tests_outside_test_module = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"
