[package]
name = "turn-me-off"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version ="5.4.0", features=["axum_extras"] }
utoipa-swagger-ui = { version="9.0.2", features = ["axum"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
pedantic = "deny"
dbg_macro = "deny"
empty_structs_with_brackets = "deny"
float_cmp_const = "deny"
if_then_some_else_none = "deny"
same_name_method = "deny"
tests_outside_test_module = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"
